--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,35 @@
 // Navigation Styles here
+
+nav {
+  width: 100%;
+  height: 100px;
+  border-bottom: 2px dashed @silver;
+  display: flex;
+  align-items: center;
+
+  .nav-container {
+    width: 800px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    h1 {
+      width: 20%;
+      text-align: left;
+    }
+
+    .nav-links {
+      width: 80%;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+
+      a {
+        padding: 2rem;
+        text-decoration: none;
+        font-size: 1.5rem;
+        color: black;
+      }
+    }
+  }
+}
