--- a/css/index.css
+++ b/css/index.css
@@ -196,7 +196,7 @@ nav .nav-container .nav-links a {
   padding: 2rem;
   text-decoration: none;
   font-size: 1.5rem;
-  color: black;
+  color: #212529;
 }
 .footer {
   width: 100%;
@@ -208,6 +208,20 @@ nav .nav-container .nav-links a {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
+}
+.home .header-section {
+  display: flex;
+  flex-direction: column;
+  border-bottom: 2px dashed #C0C0C0;
+}
+.home .header-section .header-img {
+  background-image: url(../img/fun-bus.jpg);
+  background-size: cover;
+  background-position: center;
+  height: 300px;
+}
+.home .header-section .header-content {
+  padding: 2rem 0;
 }
 .home .content-section {
   margin: 30px 0;
@@ -254,4 +268,15 @@ nav .nav-container .nav-links a {
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+.home .content-pick .destination .btn {
+  width: 100%;
+  height: 50px;
+  border-radius: 20px;
+  background: #17A2B8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #FFFFFF;
+  font-size: 2rem;
 }
