--- a/less/mixins.less
+++ b/less/mixins.less
@@ -4,3 +4,15 @@
   justify-content: @a;
   align-items: @b;
 }
+
+.signup() {
+  width: 100%;
+  height: 50px;
+  border-radius: 20px;
+  background: @eastern-blue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: @white;
+  font-size: 2rem;
+}
