--- a/less/navigation.less
+++ b/less/navigation.less
@@ -28,7 +28,7 @@ nav {
         padding: 2rem;
         text-decoration: none;
         font-size: 1.5rem;
-        color: black;
+        color: @shark;
       }
     }
   }
