--- a/css/index.css
+++ b/css/index.css
@@ -171,9 +171,14 @@ img {
 nav {
   width: 100%;
   height: 100px;
-  border-bottom: 2px dashed #C0C0C0;
+  border-bottom: 2px dashed #c0c0c0;
   display: flex;
   align-items: center;
+}
+@media (max-width: 500px) {
+  nav {
+    height: 150px;
+  }
 }
 nav .nav-container {
   width: 800px;
@@ -182,15 +187,31 @@ nav .nav-container {
   flex-direction: row;
   align-items: center;
 }
+@media (max-width: 500px) {
+  nav .nav-container {
+    flex-direction: column;
+  }
+}
 nav .nav-container h1 {
   width: 20%;
   text-align: left;
+}
+@media (max-width: 500px) {
+  nav .nav-container h1 {
+    width: 100%;
+    text-align: center;
+  }
 }
 nav .nav-container .nav-links {
   width: 80%;
   display: flex;
   justify-content: flex-end;
   align-items: center;
+}
+@media (max-width: 500px) {
+  nav .nav-container .nav-links {
+    justify-content: center;
+  }
 }
 nav .nav-container .nav-links a {
   padding: 2rem;
@@ -201,7 +222,7 @@ nav .nav-container .nav-links a {
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
-  background: #FFEBCD;
+  background: #ffebcd;
 }
 .footer p {
   text-align: center;
@@ -212,7 +233,7 @@ nav .nav-container .nav-links a {
 .home .header-section {
   display: flex;
   flex-direction: column;
-  border-bottom: 2px dashed #C0C0C0;
+  border-bottom: 2px dashed #c0c0c0;
 }
 .home .header-section .header-img {
   background-image: url(../img/fun-bus.jpg);
@@ -223,26 +244,60 @@ nav .nav-container .nav-links a {
 .home .header-section .header-content {
   padding: 2rem 0;
 }
+@media (max-width: 500px) {
+  .home .header-section .header-content {
+    padding: 2rem;
+  }
+}
 .home .content-section {
   margin: 30px 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-section {
+    flex-direction: column;
+    padding: 2rem;
+  }
+}
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
+}
+@media (max-width: 500px) {
+  .home .content-section .text-content {
+    width: 100%;
+    padding: 1rem;
+  }
 }
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
 }
+@media (max-width: 500px) {
+  .home .content-section .img-content {
+    width: 100%;
+    padding: 1rem;
+  }
+}
 .home .content-section .img-content img {
   border-radius: 10px;
 }
+@media (max-width: 500px) {
+  .home .content-section .img-content img {
+    width: 100%;
+  }
+}
 .home .inverse-content {
   padding-bottom: 30px;
-  border-bottom: 2px dashed #C0C0C0;
+  border-bottom: 2px dashed #c0c0c0;
+}
+@media (max-width: 500px) {
+  .home .inverse-content {
+    display: flex;
+    flex-direction: column-reverse;
+  }
 }
 .home .inverse-content .text-content {
   padding-left: 1%;
@@ -261,22 +316,34 @@ nav .nav-container .nav-links a {
 }
 .home .content-pick {
   padding-top: 30px;
-  border-top: 2px dashed #C0C0C0;
+  border-top: 2px dashed #c0c0c0;
   display: flex;
   justify-content: space-between;
+}
+@media (max-width: 500px) {
+  .home .content-pick {
+    flex-direction: column;
+  }
 }
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
 }
+@media (max-width: 500px) {
+  .home .content-pick .destination {
+    width: 70%;
+    margin: 0 auto;
+    padding: 2rem 0;
+  }
+}
 .home .content-pick .destination .btn {
   width: 100%;
   height: 50px;
   border-radius: 20px;
-  background: #17A2B8;
+  background: #17a2b8;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #FFFFFF;
+  color: #ffffff;
   font-size: 2rem;
 }
